result/subtask14-forall/testcase01.out
> Create symbol table (scope level 0)
func: mod
> Insert `mod` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `num` (addr: 0) to scope level 1
> Insert `mod` (addr: 1) to scope level 1
IDENT (name=num, address=0)
INT_LIT 0
LES
IF
> Create symbol table (scope level 2)
/home/share/hw2/input/subtask14-forall/testcase01.cpp:2:19: error:  syntax error
     2 |    if( num < 0 ) return ( num + ( num * -1 / mod + 1 ) * mod ); // cool!
       |                  ^
Total lines: 2
